Новое название — Trollolo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>   
     <div class="container">
       
-      <h1>Cloud</h1>
+      <h1>Cloud Trollolo</h1>
       <hr>
       <div class="row">
         <div class="span5">
