Исправления https://github.com/cnord/cloud-ui-prototype/issues/1

--- a/legman/client_report.html
+++ b/legman/client_report.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Личный кабинет</title>
+  <title>Личный кабинет</title><link href="css/common.css" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.css" rel="stylesheet">
   <!-- 3 KB -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.js"></script>
-  <link href="css/common.css" rel="stylesheet">
+  
 </head>
 <body>
 <div id="wrap">
@@ -70,12 +70,28 @@
           </div>
           <div class="event-wrapper">
             <div class="event alarm-event">
-              <h2>Тревога</h2>
+              <h2> Тревога</h2>
               <p>
                 КТС в торговом зале
               </p>
-              <div class="fotorama" data-nav="false"  data-fit="cover">
-                <img src="img/photo.jpg" alt=""> <img src="img/ph2.jpg" alt="">
+             <div class="fotorama" data-fit="cover" data-nav="thumbs" data-width="100%">
+                <img src="img/01.png" alt="" ><img src="img/02.png" alt=""><img src="img/03.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event alarm-event">
+              <h2> Тревога</h2>
+              <p>
+                КТС в торговом зале
+              </p>
+             <div class="video">
+                <img src="img/video.png" alt="" >
               </div>
             </div>
           </div>
