--- a/legman/index.html
+++ b/legman/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Личный кабинет</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.css" rel="stylesheet">
   <!-- 3 KB -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.js"></script>
   <link href="css/common.css" rel="stylesheet">
 </head>
@@ -51,7 +51,7 @@
         12 ноября, пн
       </div>
       <div class="timeline">
-        <div class="pos-relative divider-wrapper event-right">
+        <div class="pos-relative divider-wrapper event-left">
           <div class="time">
             00:12
           </div>
@@ -87,8 +87,24 @@
               <p>
                 КТС в торговом зале
               </p>
-              <div class="fotorama" data-nav="false"  data-fit="cover">
-                <img src="img/photo.jpg" alt=""> <img src="img/ph2.jpg" alt="">
+              <div class="fotorama" data-fit="cover" data-nav="thumbs" data-width="100%">
+                <img src="img/01.png" alt="" ><img src="img/02.png" alt=""><img src="img/03.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event alarm-event">
+              <h2> Тревога</h2>
+              <p>
+                КТС в торговом зале
+              </p>
+              <div class="video">
+                <img src="img/video.png" alt="" >
               </div>
             </div>
           </div>
@@ -275,7 +291,7 @@
             </div>
           </div>
         </div>
-        <div class="pos-relative divider-wrapper event-left">
+        <div class="pos-relative divider-wrapper">
           <div class="time">
             00:12
           </div>
