--- a/legman/client_report.html
+++ b/legman/client_report.html
@@ -5,7 +5,6 @@
   <title>Личный кабинет</title><link href="css/common.css" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.css" rel="stylesheet">
-  <!-- 3 KB -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.js"></script>
   
 </head>
@@ -25,9 +24,7 @@
         </p>
         </address>
         <p>
-          23
-          сентября
-          2014, 23:54
+          23 сентября 2014, 23:54
         </p>
       </div>
     </div>
