--- a/legman/index.html
+++ b/legman/index.html
@@ -25,9 +25,7 @@
         </p>
         </address>
         <p>
-          23
-          сентября
-          2014, 23:54
+          23 сентября 2014, 23:54
         </p>
       </div>
     </div>
@@ -144,18 +142,7 @@
               <h2>Отказ от реагирования</h2>
               <p>
                 Волкодав <br>
-                ≈
-                7.4
-                км
-                , 9
-                мин
-                (
-                ул
-                .
-                Звенигородская
-                ,
-                д
-                . 8)
+                ≈ 7.4 км, 9 мин (ул.Звенигородская,д.8)
               </p>
               <div class="imgs">
                 <img src="img/ph2.jpg" width="435" alt="">
@@ -169,10 +156,7 @@
           </div>
           <div class="event-wrapper">
             <div class="event operator-event">
-              Вызов
-              группы
-              :
-              Зубоскал
+              Вызов группы: Зубоскал
               <p>
                 Некрасова Тамара
               </p>
@@ -185,8 +169,7 @@
           </div>
           <div class="event-wrapper">
             <div class="event group-event">
-              Подтверждение
-              вызова
+              Подтверждение вызова
               <p>
                 Зубоскал
                 ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
