--- a/legman/client_report.html
+++ b/legman/client_report.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Личный кабинет</title><link href="css/common.css" rel="stylesheet">
+  <title>Личный кабинет</title>
+  <link href="css/common.css" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.css" rel="stylesheet">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.js"></script>
-  
 </head>
 <body>
 <div id="wrap">
@@ -35,26 +35,26 @@
         12 сентября, пн
       </div>
       <div class="timeline">
-        <div class="pos-relative divider-wrapper ">
+        <div class="pos-relative divider-wrapper">
           <div class="time">
             00:12
           </div>
           <div class="event-wrapper">
             <div class="event  guard-on">
-              <h2>Постановка на охрану</h2>
+              <h2>Взятие под охрану</h2>
               <p>
                 Щуплова Наталья
               </p>
             </div>
           </div>
         </div>
-        <div class="pos-relative divider-wrapper ">
+        <div class="pos-relative divider-wrapper">
           <div class="time">
             00:12
           </div>
           <div class="event-wrapper">
             <div class="event  guard-off">
-              <h2>Снятие с охраны</h2>
+              <h2> Снятие с охраны</h2>
               <p>
                 Щуплова Наталья
               </p>
@@ -71,7 +71,20 @@
               <p>
                 КТС в торговом зале
               </p>
-             <div class="fotorama" data-fit="cover" data-nav="thumbs" data-width="100%">
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event alarm-event">
+              <h2> Тревога</h2>
+              <p>
+                КТС в торговом зале
+              </p>
+              <div class="fotorama" data-fit="cover" data-nav="thumbs" data-width="100%">
                 <img src="img/01.png" alt="" ><img src="img/02.png" alt=""><img src="img/03.png" alt="">
               </div>
             </div>
@@ -87,24 +100,8 @@
               <p>
                 КТС в торговом зале
               </p>
-             <div class="video">
+              <div class="video">
                 <img src="img/video.png" alt="" >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="pos-relative divider-wrapper ">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event alarm-event">
-             <h2> Тревога</h2>
-              <p>
-                КТС в торговом зале
-              </p>
-              <div class="imgs">
-                <img src="img/ph2.jpg"  alt="">
               </div>
             </div>
           </div>
@@ -116,6 +113,19 @@
           <div class="event-wrapper">
             <div class="event operator-event">
               <h2>Начата отработка тревоги</h2>
+              <p>
+                Некрасова Тамара
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event operator-event">
+              <h2>Отмена тревоги</h2>
               <p>
                 Некрасова Тамара
               </p>
@@ -141,9 +151,172 @@
           </div>
           <div class="event-wrapper">
             <div class="event operator-event">
-              <h2>Вызов группы: Зубоскал</h2>
+              <h2>Отмена вызова группы: Волкодав</h2>
               <p>
                 Некрасова Тамара
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event operator-event">
+              <h2>Прибытие группы: Волкодав</h2>
+              <p>
+                Некрасова Тамара
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event operator-event">
+              <h2>Перезакрытие объекта</h2>
+              <p>
+                Некрасова Тамара
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event operator-event">
+              <h2>Звонок</h2>
+              <p>
+                Некрасова Тамара
+              </p>
+              <p class="pos-relative">
+                <img src="img/audio.png" alt="" class="audio"> Залеевич Л.А. (клиент +79219432343)<br>
+                3 мин 23 сек
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event operator-event">
+              <h2>Отказ от перезакрытия</h2>
+              <p>
+                Некрасова Тамара
+              </p>
+              <p>
+                Ответственный за перезакрытие<br />
+                Залеевич Л.А.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Отказ от реагирования</h2>
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Отказ от реагирования</h2>
+              <p>
+                Волкодав <br>
+                ≈ 7.4 км, 9 мин (ул.Звенигородская,д.8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              Подтверждение вызова
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              Подтверждение вызова
+              <p>
+                Волкодав<br>
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Стою в пробке</h2>
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Стою в пробке</h2>
+              <p>
+                Волкодав<br>
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Прибытие на объект</h2>
+              <p>
+                Волкодав
               </p>
             </div>
           </div>
@@ -156,11 +329,11 @@
             <div class="event group-event">
               <h2>Прибытие на объект</h2>
               <p>
-                Зубоскал<br>
+                Волкодав<br>
                 ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
               </p>
               <div class="imgs">
-                <img src="img/ph2.jpg" alt="">
+                <img src="img/ph2.jpg" width="435" alt="">
               </div>
             </div>
           </div>
@@ -173,37 +346,25 @@
             <div class="event group-event">
               <h2>Перезакрытие объекта</h2>
               <p>
-                Зубоскал
+                Волкодав
               </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Требуется перезакрытие</h2>
               <p>
-                22:21 (СМС) —Травин В.А.<br />
-                22:21 (СМС) — Залеевич Л.А.
+                Зубоскал
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
               </p>
-            </div>
-          </div>
-        </div>
-        <div class="pos-relative divider-wrapper">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event operator-event">
-              <h2>Отказ от перезакрытия</h2>
-              <p> Некрасова Тамара </p>
-              <p>Ответственный за перезакрытие<br />
-Залеевич Л.А.</p>
-            </div>
-          </div>
-        </div>
-        <div class="pos-relative divider-wrapper">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event operator-event">
-              <h2>Отмена тревоги</h2>
-              <p> Некрасова Тамара </p>
-             
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
             </div>
           </div>
         </div>
