--- a/legman/index.html
+++ b/legman/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="event-wrapper">
             <div class="event  guard-on">
-              <h2>Постановка на охрану</h2>
+              <h2>Взятие под охрану</h2>
               <p>
                 Щуплова Наталья
               </p>
@@ -71,6 +71,19 @@
               <h2> Снятие с охраны</h2>
               <p>
                 Щуплова Наталья
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event alarm-event">
+              <h2> Тревога</h2>
+              <p>
+                КТС в торговом зале
               </p>
             </div>
           </div>
@@ -126,6 +139,19 @@
           </div>
           <div class="event-wrapper">
             <div class="event operator-event">
+              <h2>Отмена тревоги</h2>
+              <p>
+                Некрасова Тамара
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event operator-event">
               <h2>Вызов группы: Волкодав</h2>
               <p>
                 Некрасова Тамара
@@ -133,77 +159,13 @@
             </div>
           </div>
         </div>
-        <div class="pos-relative divider-wrapper event-left">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event group-event">
-              <h2>Отказ от реагирования</h2>
-              <p>
-                Волкодав <br>
-                ≈ 7.4 км, 9 мин (ул.Звенигородская,д.8)
-              </p>
-              <div class="imgs">
-                <img src="img/ph2.jpg" width="435" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="pos-relative divider-wrapper">
           <div class="time">
             00:12
           </div>
           <div class="event-wrapper">
             <div class="event operator-event">
-              Вызов группы: Зубоскал
-              <p>
-                Некрасова Тамара
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="pos-relative divider-wrapper event-left">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event group-event">
-              Подтверждение вызова
-              <p>
-                Зубоскал
-                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
-              </p>
-              <div class="imgs">
-                <img src="img/ph2.jpg" width="435" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="pos-relative divider-wrapper event-left">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event group-event">
-              <h2>Стою в пробке</h2>
-              <p>
-                Зубоскал
-                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
-              </p>
-              <div class="imgs">
-                <img src="img/ph2.jpg" width="435" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="pos-relative divider-wrapper">
-          <div class="time">
-            00:12
-          </div>
-          <div class="event-wrapper">
-            <div class="event operator-event">
-              <h2>Вызов группы: Зубоскал</h2>
+              <h2>Отмена вызова группы: Волкодав</h2>
               <p>
                 Некрасова Тамара
               </p>
@@ -215,15 +177,11 @@
             00:12
           </div>
           <div class="event-wrapper">
-            <div class="event group-event">
-              <h2>Прибытие на объект</h2>
+            <div class="event operator-event">
+              <h2>Прибытие группы: Волкодав</h2>
               <p>
-                Зубоскал
-                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+                Некрасова Тамара
               </p>
-              <div class="imgs">
-                <img src="img/ph2.jpg" width="435" alt="">
-              </div>
             </div>
           </div>
         </div>
@@ -232,14 +190,10 @@
             00:12
           </div>
           <div class="event-wrapper">
-            <div class="event group-event">
+            <div class="event operator-event">
               <h2>Перезакрытие объекта</h2>
               <p>
-                Зубоскал
-              </p>
-              <p>
-                22:21 (СМС) —Травин В.А.<br />
-                22:21 (СМС) — Залеевич Л.А.
+                Некрасова Тамара
               </p>
             </div>
           </div>
@@ -253,6 +207,10 @@
               <h2>Звонок</h2>
               <p>
                 Некрасова Тамара
+              </p>
+              <p class="pos-relative">
+                <img src="img/audio.png" alt="" class="audio"> Залеевич Л.А. (клиент +79219432343)<br>
+                3 мин 23 сек
               </p>
             </div>
           </div>
@@ -279,11 +237,148 @@
             00:12
           </div>
           <div class="event-wrapper">
-            <div class="event operator-event">
-              <h2>Отмена тревоги</h2>
+            <div class="event group-event">
+              <h2>Отказ от реагирования</h2>
               <p>
-                Некрасова Тамара
+                Волкодав
               </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper event-left">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Отказ от реагирования</h2>
+              <p>
+                Волкодав <br>
+                ≈ 7.4 км, 9 мин (ул.Звенигородская,д.8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              Подтверждение вызова
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper event-left">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              Подтверждение вызова
+              <p>
+                Волкодав<br>
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper event-left">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Стою в пробке</h2>
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper event-left">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Стою в пробке</h2>
+              <p>
+                Волкодав<br>
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Прибытие на объект</h2>
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Прибытие на объект</h2>
+              <p>
+                Волкодав<br>
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Перезакрытие объекта</h2>
+              <p>
+                Волкодав
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Требуется перезакрытие</h2>
+              <p>
+                Зубоскал
+                ≈ 7.4 км, 9 мин (ул. Звенигородская, д. 8)
+              </p>
+              <div class="imgs">
+                <img src="img/ph2.jpg" width="435" alt="">
+              </div>
             </div>
           </div>
         </div>
